# ShipInspector

./: .gitignore  .vercelignore  HAND_REPLAY_PLAN.md  OBSERVABILITY.md  README.md  docker-compose.yml  otel-collector-config.yaml  package-lock.json  package.json  prometheus.yml  vercel.json
admin/: .env  package-lock.json  package.json  webpack.config.cjs
admin/plop/generators/: icon.js
admin/public/: index.html
admin/src/assets/: anchor.svg.ts  (+5 more)
api/: _helpers.ts  index.ts  package-lock.json  package.json  tsconfig.json
api/auth/: clerk-user.ts  me.ts
api/utils/: auth.ts  cors.ts  errorHandler.ts  logger.ts  rateLimit.ts
clickhouse-init/: 01-init-db.sql  users.xml
docs/: AUTHENTICATION.md  OUTS_CALCULATOR.md  RBAC.md
grafana/dashboards/: default.json
otel-collector-logs/: traces.json
scripts/: prebuild-wasm.sh  prepare-vercel-config.js  verify-wasm.sh
server/: package-lock.json  package.json  tsconfig.json
server/data/: equity_cache.db
server/scripts/: create-admin.ts  generate-metrics-data.js  seed-equity-cache.ts  test-outs.ts
server/src/: index.ts
server/wasm-equity/: BUILD_AND_TEST.md  Cargo.toml  DEVELOPMENT.md  OPTIMIZATIONS.md  PERFORMANCE_RESULTS.md  README.md  benchmark.js  build.sh  compare-performance.js
server/wasm-equity/pkg/: .gitignore  README.md  package.json  wasm_equity.d.ts  wasm_equity.js  wasm_equity_bg.wasm  wasm_equity_bg.wasm.d.ts
server/wasm-equity/src/: lib.rs
web/: .env  .env.example  package-lock.json  package.json  plopfile.js  tsconfig.json  webpack.config.cjs
web/public/: index.html
web/src/: index.ts
(+247 files in other folders)
