[package]
name = "wasm-equity"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = []

[profile.release]
opt-level = 3       # Optimize for speed (maximum)
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = false       # Keep symbols for better optimization

